[package]
name = "rsec"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "Test the strength of your passwords at hypersonic speeds."
homepage = "https://github.com/iamtheblackunicorn/rsec"
repository = "https://github.com/iamtheblackunicorn/rsec"
documentation = "https://github.com/iamtheblackunicorn/rsec"
readme = "README.markdown"
keywords = ["security"]
categories = ["security"]
exclude = ["/.github"]
